--- a/index.html
+++ b/index.html
@@ -16,16 +16,21 @@
     <header>
       <div class="container">
         <h1>Erko Bridee</h1>
-        <h2>personal page</h2>
+        <!-- <h2>personal page</h2> -->
 
         <section id="downloads">
           <a href="https://github.com/erkobridee" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          
+          <a href="https://about.me/erko.bridee" class="btn">About Me</a>
         </section>
       </div>
     </header>
 
     <div class="container">
       <section id="main_content">
+        <p>I'm a mad computer scientist, but with bachelor's degree \o/</p>
+        
+<!--
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
@@ -50,6 +55,7 @@
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+-->
       </section>
     </div>
 
